# cute-vcv

./: .gitignore  CMakeLists.txt  Makefile  README.md  cliff.toml  package-lock.json  package.json  plugin.json  public-cutemodules.md
.github/workflows/: publish-vcvrack.yml
cores/: utils.h
cores/oscillator/: oscillator.h
cores/pulsar/: antialiased_oscillator.h  biquad.c  biquad.h  minblep.c  minblep.h  minblep_lut.c  minblep_lut.h  mom_jeans_gen.cpp  mom_jeans_gen.h  pulsar.c  pulsar.h  pulsar_calibration.c  pulsar_lut.c  pulsar_lut.h  pulsar_oscillator.c  pulsar_oscillator.h
gen-prototypes/cacio-e-pepe/: cacio-e-pepe-gen.maxpat
hardware/: hardware.h
max-externals/: CMakeLists.txt
max-projects/Pizza Gate Tester/: Pizza Gate Tester.maxproj
max-projects/Pulsar Tester/: pulsar-tester.maxpat  signal-generator.maxpat
max-projects/Uexkull Tester/: uexkull-tester.maxpat
max-projects/Waveforms/: waveform-playback.maxpat  waveforms.maxpat
oscillator/: oscillator.c
panels/cacio-e-pepe/: cacio-e-pepe.ai
panels/pulsar/: momjeans_r1.ai  pulsar.ai
phasor/: phasor.c  phasor.h
pulsar/: antialiased_oscillator.c  pulsar.c  pulsar_calibration.h
release-notes/: v2.0.3.md
rp2040/: CMakeLists.txt
rp2040/blink/: CMakeLists.txt  blink.cpp  shift-register.hpp
script/: blep_table.json  lut_generate.js  pll_calculator.js  ramp_table.json  sinc_table.json  vcv-format-svg.js  vcv_blep_table.json  vcv_blep_table_shift.json  version.js
src/: cacio-e-pepe.cpp  mom-jeans.cpp
stm32/mom-jeans-h7/: CMakeLists.txt  (+2 more)
vcv-rack/: .gitignore  Makefile  plugin.json
(+29 files in other folders)
